# Sprinkler

./: .gitignore
hum_sensor/: Makefile  hum-sensor.pro
hum_sensor/src/: main.c
valve/: .gitignore  .nvim.lua  CMakeLists.txt  Makefile  seconds_to_00.sh  valve.pro
valve/.qtc_clangd/: compile_commands.json
valve/.qtc_clangd/.cache/clangd/index/: common.h.4532393C53906C32.idx  delay.h.917516E2746E809C.idx  delay_basic.h.CDE4AD7A8E15F7E9.idx  fuse.h.C9A7DBA9CB7B3AC2.idx  interrupt.h.AF9CA1A394E5896D.idx  inttypes.h.05626D39033943A5.idx  io.h.C29F50866C1F33CA.idx  iotn2313.h.10E6DA7178AE9F96.idx  lock.h.700A9D3B456DD44A.idx  main.c.DD05B7EB8A6581D2.idx  math.h.D756F57F2D92736E.idx  portpins.h.B36C2F6F10DC1521.idx  sfr_defs.h.57CF88EFC4ACF3DB.idx  sleep.h.AE76B7DC64A05D22.idx  stdbool.h.294D38233D83E8B9.idx  stdbool.h.A0B65BD8D6B53F61.idx  stdint.h.449821CA890C2427.idx  version.h.8C5AE94C2A77CF6A.idx
valve/inc/: bin_heap.h  commons.h  nokia_5110.h  nokia_5110_font.h  rt_clock.h  spi.h  valve.h
valve/resources/: current_time.sh  seconds_from_00.sh  seconds_to_00.sh
valve/src/: bin_heap.c  commons.c  main.c  nokia_5110.c  nokia_5110_font.c  rt_clock.c  spi.c  valve.c
